WIP dotnet watch not responding giving back an privacy error

--- a/ClarieSalonPage/Views/Home/Index.cshtml
+++ b/ClarieSalonPage/Views/Home/Index.cshtml
@@ -1,3 +1,10 @@
 @{
   Layout = "_Layout";
 }
+
+<h1>Best Stylish hair Salon in Town!</h1>
+
+
+<p>@Html.ActionLink("Add Stylish!", "Create", "Stylish")</p>
+@* <p>@Html.ActionLink("Add!", "Create", "")</p> *@
+<p>@Html.ActionLink("View Stylish!", "Index", "Stylish")</p>
